feat: Product Update, Delete 기능 관련 페이지 구현

--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -27,18 +27,27 @@
         <th scope="col">Description</th>
         <th scope="col">CreatedAt</th>
         <th scope="col">UpdatedAt</th>
+        <th scope="col">Update / Delete</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="product: ${products}" th:object="${product}">
-        <td th:text="*{productId}"></td>
-        <td th:text="*{productName}"></td>
-        <td th:text="*{category}"></td>
-        <td th:text="*{price}"></td>
-        <td th:text="*{description}"></td>
-        <td th:text="*{createdAt}"></td>
-        <td th:text="*{updatedAt}"></td>
-    </tr>
+    <form>
+        <tr th:each="product: ${products}" th:object="${product}">
+            <td th:text="*{productId}"></td>
+            <td th:text="*{productName}"></td>
+            <td th:text="*{category}"></td>
+            <td th:text="*{price}"></td>
+            <td th:text="*{description}"></td>
+            <td th:text="*{createdAt}"></td>
+            <td th:text="*{updatedAt}"></td>
+            <td>
+                <a class="btn btn-info btn-small" th:href="@{'/update-product/' + *{productId}}"
+                   type="button">Update</a>
+                <a class="btn btn-danger btn-small" th:href="@{'/delete-product/' + *{productId}}"
+                   type="button">Delete</a>
+            </td>
+        </tr>
+    </form>
     </tbody>
 </table>
 </body>
