--- a/src/main/resources/templates/update-product.html
+++ b/src/main/resources/templates/update-product.html
@@ -14,25 +14,31 @@
 <body class="container-fluid">
 <h1>Grids & Circles</h1>
 <h2>Production Management</h2>
-<form method="post" th:action="@{/products}">
+<form method="post" th:action="@{/update-product}">
     <div class="mb-3">
-        <label class="form-label" for="productId">Name</label>
-        <input class="form-control" id="productId" name="productName" type="text">
+        <label class="form-label" for="productId">Id</label>
+        <input id="productId" name="productId" th:value="${product.productId}" type="hidden"/>
+        <input class="form-control" disabled th:value="${product.productId}" type="text">
+    </div>
+    <div class="mb-3">
+        <label class="form-label" for="productName">Name</label>
+        <input class="form-control" id="productName" name="productName" th:value="${product.productName}" type="text">
     </div>
     <div class="mb-3">
         <label class="form-label" for="category">Category</label>
         <select class="form-select" id="category" name="category">
-            <option selected>Open this select menu</option>
-            <option value="COFFEE_BEAN_PACKAGE">COFFEE BEAN PACKAGE</option>
+            <option>Open this select menu</option>
+            <option selected th:text="${product.category}" th:value="${product.category}"></option>
         </select>
     </div>
     <div class="mb-3">
         <label class="form-label" for="price">Price</label>
-        <input class="form-control" id="price" name="price" type="number">
+        <input class="form-control" id="price" name="price" th:value="${product.price}" type="number">
     </div>
     <div class="mb-3">
         <label class="form-label" for="description">Description</label>
-        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+        <textarea class="form-control" id="description" name="description" rows="3"
+                  th:text="${product.description}"></textarea>
     </div>
     <button class="btn btn-primary" type="submit">Submit</button>
 </form>
